covid_reports.html file edited

--- a/practice-app/templates/covid_reports.html
+++ b/practice-app/templates/covid_reports.html
@@ -8,8 +8,8 @@
   <h1> <b> Latest Covid Reports All Over The World  </b> </h1>   </br>
 
    CONFIRMED CASE : {{confirm}}  </br>
-   DEATHS :   {{recovery}}       </br>
-   RECOVERED : {{death}}         </br>
+   DEATHS :   {{death}}       </br>
+   RECOVERED : {{recovery}}         </br>
 
       </br> </br>
   COVİD 19 RANKING ACCORDING TO CONFIRMED TOTAL CASES (TOP 20 COUNTRY) </br>
