--- a/practice-app/templates/covid_country_report.html
+++ b/practice-app/templates/covid_country_report.html
@@ -1,9 +1,42 @@
 <!DOCTYPE html>
+{% load static %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Covid19 Cases</title>
+     <link rel="stylesheet" href="{% static 'button.css' %}">
 </head>
+
+
+<div class="header">
+  <a href="#default" class="logo">MyApp</a>
+  <div class="header-right">
+    <a href="http://localhost:8000/">Home</a>
+
+    <a href="http://localhost:8000/register/">Register</a>
+     <a href="http://localhost:8000/search_user/">Search User</a>
+       <a href="http://localhost:8000/eq_post/">Equipment Post</a>
+
+
+      <a href="http://localhost:8000/event_post/">Event Post</a>
+      <a href="http://localhost:8000/places/">Places API</a>
+      <a class="active"  href="http://localhost:8000/covid19/"> Covid19 API</a>
+
+
+     <a href="http://localhost:8000/random_article/">Random Article </a>
+      <a href="http://localhost:8000/holidays/ ">Holidays API </a>
+      <a href="http://localhost:8000/formula1/">Formula1 API</a>
+
+
+      <a href="http://localhost:8000/team/">NBA Team API </a>
+      <a href="http://localhost:8000/hava/">Hava API</a>
+  </div>
+</div>
+
+
+
 <body>
 <h2> {{cname}} Latest Covid19 Reports </h2>
 </br> </br>
@@ -14,4 +47,25 @@ Recovered :  {{recover}}   </br>
 
 Update Time : {{time}}
 </body>
+
+
+
+<div class="footer">
+   <h4> Our Github Repo : <a href="https://github.com/bounswe/2021SpringGroup4"> 2021SpringGroup4 </a>   </h4>
+<p>
+      Our Team Members :
+      <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Salih-Furkan-Akkurt"> Salih Furkan Akkurt </a>  ,
+      <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Ece-Dilara-Aslan"> Ece Dilara Aslan </a> ,
+      <a href="https://github.com/bounswe/2021SpringGroup4/wiki/%C4%B0hsan-Mert-Atalay"> İhsan Mert Atalay </a>,
+      <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Muhammed-Irfan-Bozkurt"> Muhammed İrfan Bozkurt</a>,
+      <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Muhammed-Irfan-Bozkurt"> Mehmet Hilmi Dündar</a>,
+      <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Muhammed-Irfan-Bozkurt"> Berkay Gümüş</a>,
+       <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Muhammed-Irfan-Bozkurt"> Tolga Kerimoğlu</a>,
+       <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Muhammed-Irfan-Bozkurt"> Yiğit Sarıoğlu </a>,
+      <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Muhammed-Irfan-Bozkurt"> Yağmur Selek </a>
+
+
+  </p>
+</div>
+
 </html>
